🐛 fix(svg.index.ts): change condition from `legend_show` to `legend` to match config property name 🐛 fix(tooltip.ts): update references to tooltip style properties to use `style.tooltip` instead of `tooltip_style` 🐛 fix(tooltip/rect.ts): update references to tooltip style properties to use `style.tooltip` instead of `tooltip_style` 🐛 fix(tooltip/title.ts): update references to tooltip style properties to use `style.tooltip` instead of `tooltip_style` 🐛 fix(style.scss): update opacity value for `.block-level-mask` to 0.7 for better visibility ✨ feat(style.scss): add `cursor: pointer` to `.block` class to indicate clickable elements ✨ feat(tooltip/title.ts): add `pointer-events: none` to `.title` class to prevent tooltip from blocking mouse events

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -103,6 +103,8 @@
   .stage {
     .blocks {
       .block {
+        cursor: pointer;
+
         .bounds {
           .block-hull-border {
             stroke-linejoin: round;
@@ -118,11 +120,12 @@
             @include trans();
             stroke-linejoin: round;
             opacity: 1;
+
           }
           .block-level-mask {
             @include trans();
             stroke-linejoin: round;
-            opacity: 1;
+            opacity: 0.7;
           }
           .seat-level-mask {
             @include trans();
@@ -139,6 +142,7 @@
           .title {
             text-anchor: middle;
             dominant-baseline: central;
+            pointer-events: none;
           }
         }
         .seats {
